# Haskell-Project-02

./: LICENSE  LMS.cabal  Library-Management-System.hs  README.md  Setup.hs
App/: Main.hs
Src/: Book.hs  Library.hs  Member.hs  Utils.hs
Test/: BookSpec.hs  LibrarySpec.hs  MemberSpec.hs  Spec.hs
